Added simpler obstacles levels

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li><li><span><a href=\"#Single-file-for-easier-training\" data-toc-modified-id=\"Single-file-for-easier-training-1.10\">Single file for easier training</a></span></li><li><span><a href=\"#Single-file-with-all-categories-using-weights\" data-toc-modified-id=\"Single-file-with-all-categories-using-weights-1.11\">Single file with all categories using weights</a></span></li><li><span><a href=\"#Creating-arenas-for-obstacles-category\" data-toc-modified-id=\"Creating-arenas-for-obstacles-category-1.12\">Creating arenas for obstacles category</a></span></li><li><span><a href=\"#Creating-new-tests\" data-toc-modified-id=\"Creating-new-tests-1.13\">Creating new tests</a></span><ul class=\"toc-item\"><li><span><a href=\"#Obstacles\" data-toc-modified-id=\"Obstacles-1.13.1\">Obstacles</a></span></li><li><span><a href=\"#Avoidance\" data-toc-modified-id=\"Avoidance-1.13.2\">Avoidance</a></span></li><li><span><a href=\"#Spatial-reasoning\" data-toc-modified-id=\"Spatial-reasoning-1.13.3\">Spatial reasoning</a></span></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li><li><span><a href=\"#Single-file-for-easier-training\" data-toc-modified-id=\"Single-file-for-easier-training-1.10\">Single file for easier training</a></span></li><li><span><a href=\"#Single-file-with-all-categories-using-weights\" data-toc-modified-id=\"Single-file-with-all-categories-using-weights-1.11\">Single file with all categories using weights</a></span></li><li><span><a href=\"#Creating-new-arenas\" data-toc-modified-id=\"Creating-new-arenas-1.12\">Creating new arenas</a></span></li><li><span><a href=\"#Creating-new-tests\" data-toc-modified-id=\"Creating-new-tests-1.13\">Creating new tests</a></span><ul class=\"toc-item\"><li><span><a href=\"#Obstacles\" data-toc-modified-id=\"Obstacles-1.13.1\">Obstacles</a></span></li><li><span><a href=\"#Avoidance\" data-toc-modified-id=\"Avoidance-1.13.2\">Avoidance</a></span></li><li><span><a href=\"#Spatial-reasoning\" data-toc-modified-id=\"Spatial-reasoning-1.13.3\">Spatial reasoning</a></span></li></ul></li></ul></li></ul></div>"
    ]
   },
   {
@@ -41,8 +41,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-15T19:29:57.140125Z",
-     "start_time": "2019-10-15T19:29:57.117486Z"
+     "end_time": "2019-10-19T06:32:53.328852Z",
+     "start_time": "2019-10-19T06:32:53.308935Z"
     }
    },
    "outputs": [],
@@ -57,8 +57,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-15T19:29:57.806860Z",
-     "start_time": "2019-10-15T19:29:57.421977Z"
+     "end_time": "2019-10-19T06:32:53.914292Z",
+     "start_time": "2019-10-19T06:32:53.510477Z"
     }
    },
    "outputs": [],
@@ -3559,14 +3559,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Single file with all categories using weights"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "After training over night and seeing bad results I have come to the conclusion that shorter arenas need to have smaller frequency than long levels.  \n",
     "To do that I have prepared a new script to generate levels.\n",
@@ -3582,6 +3586,7 @@
      "end_time": "2019-10-05T09:26:47.341323Z",
      "start_time": "2019-10-05T09:26:15.589271Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3611,7 +3616,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-06T18:03:20.094241Z",
      "start_time": "2019-10-06T18:02:44.890353Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3640,7 +3646,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-07T17:40:17.880889Z",
      "start_time": "2019-10-07T17:39:20.133234Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3687,7 +3694,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-08T16:47:10.230531Z",
      "start_time": "2019-10-08T16:45:50.965063Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3738,7 +3746,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-09T16:12:26.223176Z",
      "start_time": "2019-10-09T16:11:04.179944Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3793,7 +3802,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-13T05:44:25.159982Z",
      "start_time": "2019-10-13T05:44:21.223004Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3824,7 +3834,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -3835,7 +3847,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-13T16:22:14.899202Z",
      "start_time": "2019-10-13T16:14:08.641481Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -4892,7 +4905,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-14T18:19:22.252126Z",
      "start_time": "2019-10-14T18:17:46.761788Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5175,7 +5189,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-15T19:33:29.724439Z",
      "start_time": "2019-10-15T19:32:05.823046Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5468,31 +5483,37 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "## Creating arenas for obstacles category"
+    "## Creating new arenas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-13T07:15:44.428476Z",
-     "start_time": "2019-10-13T07:15:44.114884Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-19T06:42:49.947921Z",
+     "start_time": "2019-10-19T06:42:49.921465Z"
+    }
    },
    "outputs": [],
    "source": [
+    "from orangutan.arenas.obstacles import create_arena_with_goal_inside_cillinder\n",
+    "\n",
     "arena_config = ArenaConfig()\n",
     "for idx in range(10):\n",
-    "    arena_config.arenas[idx] = create_arena_with_platform_maze(t=5000)\n",
+    "    arena_config.arenas[idx] = create_arena_with_goal_inside_cillinder(t=5000)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "CONFIG_FILEPATH=\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/notebooks/temp.yaml\" make visualize-arena"
    ]
   },
   {
