Added difficulty levels to walls_maze

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -5490,20 +5490,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-19T06:42:49.947921Z",
-     "start_time": "2019-10-19T06:42:49.921465Z"
+     "end_time": "2019-10-19T06:53:11.944961Z",
+     "start_time": "2019-10-19T06:53:11.776765Z"
     }
    },
    "outputs": [],
    "source": [
     "from orangutan.arenas.obstacles import create_arena_with_goal_inside_cillinder\n",
+    "from orangutan.arenas.spatial_reasoning import create_arena_with_walls_maze\n",
     "\n",
     "arena_config = ArenaConfig()\n",
     "for idx in range(10):\n",
-    "    arena_config.arenas[idx] = create_arena_with_goal_inside_cillinder(t=5000)\n",
+    "    arena_config.arenas[idx] = create_arena_with_walls_maze(t=5000)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
