Created what is hopefully the last training arenas configuration

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-19T06:32:53.914292Z",
-     "start_time": "2019-10-19T06:32:53.510477Z"
+     "end_time": "2019-10-19T07:40:10.670128Z",
+     "start_time": "2019-10-19T07:40:10.643113Z"
     }
    },
    "outputs": [],
@@ -77,6 +77,7 @@
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_in_front_of_agent\n",
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_separated_by_wall, create_arena_with_same_size_green_goal_separated_by_wall\n",
     "from orangutan.arenas.preferences import create_arena_with_yellow_goal_separated_by_wall\n",
+    "from orangutan.arenas.utils import merge, set_all_arenas_to_same_time\n",
     "\"\"\"\n",
     "from orangutan.arenas.obstacles import (\n",
     "    create_arena_with_obstacles, create_center_blocked_arena, create_arena_splitted_in_two,\n",
@@ -3559,18 +3560,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Single file with all categories using weights"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "After training over night and seeing bad results I have come to the conclusion that shorter arenas need to have smaller frequency than long levels.  \n",
     "To do that I have prepared a new script to generate levels.\n",
@@ -3586,7 +3583,6 @@
      "end_time": "2019-10-05T09:26:47.341323Z",
      "start_time": "2019-10-05T09:26:15.589271Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3616,8 +3612,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-06T18:03:20.094241Z",
      "start_time": "2019-10-06T18:02:44.890353Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3646,8 +3641,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-07T17:40:17.880889Z",
      "start_time": "2019-10-07T17:39:20.133234Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3694,8 +3688,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-08T16:47:10.230531Z",
      "start_time": "2019-10-08T16:45:50.965063Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3746,8 +3739,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-09T16:12:26.223176Z",
      "start_time": "2019-10-09T16:11:04.179944Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3802,8 +3794,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-13T05:44:25.159982Z",
      "start_time": "2019-10-13T05:44:21.223004Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3834,9 +3825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -3847,8 +3836,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-13T16:22:14.899202Z",
      "start_time": "2019-10-13T16:14:08.641481Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -4905,8 +4893,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-14T18:19:22.252126Z",
      "start_time": "2019-10-14T18:17:46.761788Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -5189,8 +5176,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-15T19:33:29.724439Z",
      "start_time": "2019-10-15T19:32:05.823046Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -5485,16 +5471,351 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The cell below will hopefully be the last configuration I'm going to create. It merges an easier version of script generated levels with all the levels from the mithical megatrains."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-10-19T07:50:36.585Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7aa65501d7664d538bcf6a813c70a461",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=32), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n"
+     ]
+    }
+   ],
+   "source": [
+    "folderpath = '/media/guillermo/Data/Kaggle/animalai/agents/116_megatrain/train_017_fpoasgi_750'\n",
+    "folderpath = '/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_018_all'\n",
+    "os.makedirs(folderpath, exist_ok=True)\n",
+    "time_limit = 750\n",
+    "n_repeat = 1\n",
+    "n_configs = 32\n",
+    "for idx in tqdm(range(n_configs)):\n",
+    "    arena_config = generate_arena_config(t=time_limit, n=n_repeat)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    for arena_config_path in glob.glob('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_004/*.yaml'):\n",
+    "        for _ in range(n_repeat):\n",
+    "            arena_config = merge(arena_config, arena_config_path)\n",
+    "    set_all_arenas_to_same_time(arena_config, time_limit)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('%s/%03d.yaml' % (folderpath, idx), 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Creating new arenas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-19T07:07:53.852613Z",
-     "start_time": "2019-10-19T07:07:53.646396Z"
+     "end_time": "2019-10-19T07:40:14.632499Z",
+     "start_time": "2019-10-19T07:40:14.579253Z"
     }
    },
    "outputs": [],
@@ -5503,8 +5824,11 @@
     "from orangutan.arenas.spatial_reasoning import create_arena_with_platform_maze\n",
     "\n",
     "arena_config = ArenaConfig()\n",
-    "for idx in range(10):\n",
+    "for idx in range(1):\n",
     "    arena_config.arenas[idx] = create_arena_with_platform_maze(t=500, difficulty='hard')\n",
+    "\n",
+    "arena_config = merge(arena_config, '/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/map.yaml')\n",
+    "set_all_arenas_to_same_time(arena_config, 750)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
