Added information about the number of environments and train configuration

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -5476,10 +5476,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-10-19T07:50:36.585Z"
+     "end_time": "2019-10-19T07:52:54.365347Z",
+     "start_time": "2019-10-19T07:50:36.590079Z"
     }
    },
    "outputs": [
@@ -5779,7 +5780,17 @@
       "Generalization: 64\n",
       "Internal models: 34\n",
       "282\n",
-      "424\n"
+      "424\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 60\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 34\n",
+      "282\n",
+      "424\n",
+      "\n"
      ]
     }
    ],
