Added arena with small goal to generation

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -3560,18 +3560,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Single file with all categories using weights"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "After training over night and seeing bad results I have come to the conclusion that shorter arenas need to have smaller frequency than long levels.  \n",
     "To do that I have prepared a new script to generate levels.\n",
@@ -3587,7 +3583,6 @@
      "end_time": "2019-10-05T09:26:47.341323Z",
      "start_time": "2019-10-05T09:26:15.589271Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3617,8 +3612,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-06T18:03:20.094241Z",
      "start_time": "2019-10-06T18:02:44.890353Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3647,8 +3641,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-07T17:40:17.880889Z",
      "start_time": "2019-10-07T17:39:20.133234Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3695,8 +3688,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-08T16:47:10.230531Z",
      "start_time": "2019-10-08T16:45:50.965063Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3747,8 +3739,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-09T16:12:26.223176Z",
      "start_time": "2019-10-09T16:11:04.179944Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3803,8 +3794,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-13T05:44:25.159982Z",
      "start_time": "2019-10-13T05:44:21.223004Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3835,9 +3825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -3848,8 +3836,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-13T16:22:14.899202Z",
      "start_time": "2019-10-13T16:14:08.641481Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -4906,8 +4893,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-14T18:19:22.252126Z",
      "start_time": "2019-10-14T18:17:46.761788Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -5190,8 +5176,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-15T19:33:29.724439Z",
      "start_time": "2019-10-15T19:32:05.823046Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -5484,9 +5469,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "The cell below will hopefully be the last configuration I'm going to create. It merges an easier version of script generated levels with all the levels from the mithical megatrains."
    ]
@@ -5498,8 +5481,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-19T07:52:54.365347Z",
      "start_time": "2019-10-19T07:50:36.590079Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -5834,6 +5816,41 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-27T09:16:59.819536Z",
+     "start_time": "2019-10-27T09:16:59.809408Z"
+    }
+   },
+   "source": [
+    "I have made small changes but I want to generate a new configuration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folderpath = '/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_019_all'\n",
+    "os.makedirs(folderpath, exist_ok=True)\n",
+    "time_limit = 1000\n",
+    "n_repeat = 2\n",
+    "n_configs = 16\n",
+    "for idx in tqdm(range(n_configs)):\n",
+    "    arena_config = generate_arena_config(t=time_limit, n=n_repeat)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    for arena_config_path in glob.glob('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_004/*.yaml'):\n",
+    "        for _ in range(n_repeat):\n",
+    "            arena_config = merge(arena_config, arena_config_path)\n",
+    "    set_all_arenas_to_same_time(arena_config, time_limit)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('%s/%03d.yaml' % (folderpath, idx), 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "heading_collapsed": true
    },
    "source": [
@@ -5877,14 +5894,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Creating new tests "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Obstacles"
    ]
@@ -5896,7 +5918,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-27T09:11:30.910787Z",
      "start_time": "2019-10-27T09:11:30.891553Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -5923,7 +5946,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-27T09:11:30.934983Z",
      "start_time": "2019-10-27T09:11:30.913154Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -5937,7 +5961,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-27T09:11:31.586294Z",
      "start_time": "2019-10-27T09:11:30.937419Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5981,7 +6006,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Avoidance"
    ]
@@ -5993,7 +6020,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-27T09:11:31.599176Z",
      "start_time": "2019-10-27T09:11:31.588724Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -6019,7 +6047,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-27T09:11:31.614269Z",
      "start_time": "2019-10-27T09:11:31.601491Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -6033,7 +6062,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-27T09:11:32.322794Z",
      "start_time": "2019-10-27T09:11:31.620012Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -6076,7 +6106,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Spatial reasoning"
    ]
@@ -6088,7 +6120,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-27T09:11:32.336916Z",
      "start_time": "2019-10-27T09:11:32.324850Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -6111,7 +6144,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-27T09:11:32.359545Z",
      "start_time": "2019-10-27T09:11:32.347889Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -6125,7 +6159,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-27T09:11:33.208432Z",
      "start_time": "2019-10-27T09:11:32.361932Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -6168,7 +6203,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
