New training configuration with small goals. more weight to goal on platform and generalization with goal on platform

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -5827,9 +5827,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-27T09:27:51.049818Z",
+     "start_time": "2019-10-27T09:24:52.109397Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "97c56355625f412b8de86848a22fdf7b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=16), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n"
+     ]
+    }
+   ],
    "source": [
     "folderpath = '/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_019_all'\n",
     "os.makedirs(folderpath, exist_ok=True)\n",
